2022-09-24T16:22:36Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3118984968
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 181 343 / 204 378
* notice: next accum: outdated-unq outdated-all / unq all: 182 344 / 204 378
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-10] / []

2022-09-24T08:21:21Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3117631871
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 181 343 / 203 377
* notice: next accum: outdated-unq outdated-all / unq all: 181 343 / 204 378
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-24]

2022-09-24T01:49:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3116650648
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 180 341 / 203 375
* notice: next accum: outdated-unq outdated-all / unq all: 181 343 / 203 377
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-09-09] / [2022-09-23]

2022-09-23T08:23:09Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3111345816
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 180 341 / 201 374
* notice: next accum: outdated-unq outdated-all / unq all: 180 341 / 203 375
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-09 2022-09-23]

2022-09-23T01:55:05Z: