@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-24T16:22:36Z",
+  "timestamp" : "2022-09-25T01:49:25Z",
   "count_outdated" : 344,
   "uniques_outdated" : 182,
-  "count" : 378,
+  "count" : 379,
   "uniques" : 204,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
