@@ -1,3 +1,11 @@
+2022-09-25T01:49:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3120513150
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 182 344 / 204 378
+* notice: next accum: outdated-unq outdated-all / unq all: 182 344 / 204 379
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-24]
+
 2022-09-24T16:22:36Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3118984968
 * notice: last 14d: unq all: 2 34
